manifests/seraphim/prod/obsidian/Namespace-obsidian.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: obsidian
