manifests/seraphim/prod/obsidian/Service-couchdb-couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: couchdb
    chart: couchdb-4.6.3
    heritage: Helm
    release: couchdb
  name: couchdb-couchdb
  namespace: obsidian
spec:
  clusterIP: None
  ports:
    - name: couchdb
      port: 5984
  publishNotReadyAddresses: true
  selector:
    app: couchdb
    release: couchdb
