manifests/seraphim/prod/obsidian/Service-couchdb-svc-couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: couchdb
    chart: couchdb-4.6.3
    heritage: Helm
    release: couchdb
  name: couchdb-svc-couchdb
  namespace: obsidian
spec:
  ports:
    - name: couchdb
      port: 5984
      protocol: TCP
      targetPort: 5984
  selector:
    app: couchdb
    release: couchdb
  type: ClusterIP
