manifests/seraphim/prod/obsidian/HTTPRoute-obsidian.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: obsidian
  namespace: obsidian
spec:
  hostnames:
    - obsidian.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: couchdb-svc-couchdb
          port: 5984
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
